# src/routes/teacher.routes.ts
@@ -1,0 +1,9 @@
+import * as express from 'express'
+import { deletedata, getdata, getsingledata, postdata, updatedata,} from '../controller/teacher.controller';
+
+
+const router = express.Router()
+router.route('/Teacher/').get(getdata).post(postdata)
+router.route('/Teacher/:id').get(getsingledata).delete(deletedata).patch(updatedata)
+
+export default router;
